src/test/ui/issues/issue-23173.stderr
error[E0599]: no variant named `Homura` found for type `Token` in the current scope
  --> $DIR/issue-23173.rs:9:16
   |
LL | enum Token { LeftParen, RightParen, Plus, Minus, /* etc */ }
   | ---------- variant `Homura` not found here
...
LL |     use_token(&Token::Homura);
   |                ^^^^^^^^^^^^^ variant not found in `Token`

error[E0599]: no function or associated item named `method` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:11:5
   |
LL | struct Struct {
   | ------------- function or associated item `method` not found for this
...
LL |     Struct::method();
   |     ^^^^^^^^^^^^^^ function or associated item not found in `Struct`

error[E0599]: no function or associated item named `method` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:13:5
   |
LL | struct Struct {
   | ------------- function or associated item `method` not found for this
...
LL |     Struct::method;
   |     ^^^^^^^^^^^^^^ function or associated item not found in `Struct`

error[E0599]: no associated item named `Assoc` found for type `Struct` in the current scope
  --> $DIR/issue-23173.rs:15:5
   |
LL | struct Struct {
   | ------------- associated item `Assoc` not found for this
...
LL |     Struct::Assoc;
   |     ^^^^^^^^^^^^^ associated item not found in `Struct`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0599`.
